# StellHydra

./: .cursorrules  .env.example  .env.production  .gitignore  ATOMIC_SWAP_IMPLEMENTATION.md  FUSION_IMPLEMENTATION_STATUS.md  INTEGRATION_SUMMARY.md  README.md  TRANSACTION_STATUS_FIX.md  deploy-all-contracts.sh  deploy-contracts.sh  deploy-stellar-contract.sh  package-lock.json  package.json  push-to-github.sh  replit.md  run-migration.js  server-config.json  tailwind.config.ts  test-atomic-swap-api.js  test-full-integration.js  vercel.json  vite.config.ts
api/_lib/: storage.js
api/bridge/: simulate.js
api/dex-prices/[fromToken]/: [toToken].js
api/transactions/: index.js
api/transactions/[id]/: index.js  status.js
api/transactions/wallet/: [address].js
api/wallets/: index.js
attached_assets/: Grok _ X_1753687033457.html
client/: index.html
client/public/: manifest.json
client/src/: App.tsx  index.css  main.tsx
client/src/components/: account-balances.tsx  atomic-swap-interface.tsx  bridge-interface-new.tsx  bridge-interface.tsx  core-bridge-interface.tsx  enhanced-route-info-panel.tsx  network-selector.tsx  price-comparison.tsx  route-info-panel.tsx  system-health-monitor.tsx  token-selector.tsx  transaction-status.tsx  wallet-connection.tsx  wallet-guide.tsx
client/src/hooks/: use-atomic-swap.ts  use-bridge.ts  use-enhanced-bridge.ts  use-wallet.ts
client/src/lib/: enhanced-stellhydra-client.ts  ethereum.ts  fusion-api.ts  global-polyfill.ts  queryClient.ts  stellar.ts  stellhydra-fusion-orchestrator.ts  test-cross-chain-fusion.ts  test-fusion-integration.ts  test-stellar-connection.ts  types.ts  utils.ts
client/src/pages/: bridge.tsx
contracts/: .env.example  .gitignore  Cargo.toml  README.md
contracts-evm/: .env.example  .gitignore  README.md  hardhat.config.js  package-lock.json  package.json
contracts-evm/contracts/: StellarEthereumEscrow.sol
contracts-evm/deployments/: sepolia_11155111.json
contracts-evm/scripts/: create-wallet.js  demo.js  deploy.js  interact.js  verify.js
contracts-evm/test/: StellarEthereumEscrow.test.js
contracts-stellar/: Cargo.toml  DEPLOYMENT.md  README.md  deploy-bridge.sh
contracts-stellar/bridge-contract/: Cargo.toml  Makefile
contracts-stellar/bridge-contract/src/: lib.rs
contracts-stellar/deployments/: testnet_addresses.json  testnet_stellar_eth_escrow.json
contracts-stellar/liquidity-pool/: Cargo.toml
contracts-stellar/liquidity-pool/src/: lib.rs
contracts-stellar/price-oracle/: Cargo.toml
contracts-stellar/router/: Cargo.toml
contracts-stellar/router/src/: lib.rs
contracts-stellar/scripts/: deploy.sh
contracts-stellar/simple-test/: Cargo.toml  Makefile
contracts-stellar/simple-test/src/: lib.rs
contracts-stellar/stellar-eth-escrow/: Cargo.toml  Makefile
contracts-stellar/stellar-eth-escrow/src/: lib.rs
contracts-stellar/stellar-eth-escrow/test_snapshots/test/: test_complete_escrow_flow.1.json  test_complete_escrow_with_correct_secret.1.json  test_create_escrow.1.json  test_initialize.1.json  test_refund_escrow.1.json
contracts-stellar/test-contract/: Cargo.toml
contracts-stellar/test-contract/src/: lib.rs
contracts/bridge-contract/: Cargo.toml
contracts/config/: load_config.sh  mainnet.toml  testnet.toml
contracts/price-oracle/src/: lib.rs
contracts/scripts/: deploy.sh  test.sh
contracts/test-contract/src/: lib.rs
deployments/: testnet_stellar_eth_escrow.json
migrations/: 0000_nasty_doctor_spectrum.sql
migrations/meta/: 0000_snapshot.json  _journal.json
server/: database-storage.ts  index.ts  routes.ts  storage.ts  test-bridge-orchestrator.js  test-bridge-orchestrator.ts
server/lib/: retry-utility.ts  stellar-escrow-client.ts
server/relayer/: README.md  config.ts  index.ts  stellhydra-relayer.ts
server/routes/: atomic-swap.ts  bridge.ts  fusion.ts
server/src/: bridge-orchestrator.ts  relayer.ts
shared/: schema.ts
(+13 files in other folders)
