[workspace]
resolver = "2"
members = [
    "test-contract",
    "bridge-contract", 
    "price-oracle",
]

[workspace.dependencies]
soroban-sdk = "21.0.0"
soroban-token-contract = "21.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true