[package]
name = "stellhydra-liquidity-pool"
version = "0.1.0"
edition = "2021"
authors = ["StellHydra Team <team@stellhydra.com>"]
license = "MIT"
description = "Liquidity pool management contract for StellHydra DEX"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]