[package]
name = "stellhydra-price-oracle"
version = "0.1.0"
edition = "2021"
authors = ["StellHydra Team <team@stellhydra.com>"]
license = "MIT"
description = "Price oracle contract for StellHydra DEX aggregation"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]