[package]
name = "stellar-eth-escrow"
version = "0.1.0"
edition = "2021"
authors = ["StellHydra Team <team@stellhydra.com>"]
license = "MIT"
description = "Hash Time Locked Contract (HTLC) for Stellar-Ethereum atomic swaps"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]